[tool.poetry]
name = "pylib-cavcrosby"
version = "0.0.6"
description = "A personal library of frequently used python code"
authors = ["Conner Crosby <conner@cavcrosby.tech>"]
license = "MIT"
packages = [
    { include = "pylib" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
GitPython = "^3.1.18"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.6b0"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
